[PLXREDBACK-40] refactor cookie handling